fix photos width and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,6 +191,16 @@ position: relative;
     color: #fafafa;
 }
     
+/*gallery page*/
+
+#photos img{
+    width:100%;
+    line-height: 1em;
+}
+
+#photos{
+    line-height: 0;
+}
 
 
 /*footer*/
